--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #131619;
+  font-family: 'Lato';
 }
 
 code {
